# mpif

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml  fortran.patch  fortran_mpich.patch  fortran_openmpi.patch  mpich.patch  openmpi.patch
OLD/: mpif_data.F90  mpif_sizeof.F90
cmake/: mpifConfig.cmake.in
dev/: mpiapi.jl
docker/: fortran.c  mpich-gcc-arm.dockerfile  mpich-gcc-arm32v7.dockerfile  mpich-gcc-arm64v8.dockerfile  mpich-gcc.dockerfile  mpich-llvm-arm64v8.dockerfile  mpich-llvm.dockerfile  openmpi-gcc-amd64.dockerfile  openmpi-gcc-arm64v8.dockerfile  openmpi-gcc.dockerfile  openmpi-llvm-arm64v8.dockerfile  openmpi-llvm.dockerfile
fortran/: f2c_abi.c  fortran.c  openmpi-abi_fortran.patch  openmpi-disable-type.patch
include/: mpi_sizeof.F90  mpif.h  mpif_constants.h  mpif_functions.h  mpif_strings.h
src/: mpi.F90  mpi_constants.F90  mpi_f08_constants.F90  mpi_f08_functions.F90  mpi_f08_types.F90  mpi_handles.c  mpi_status.c  mpi_types.F90  mpif_Init.F90  mpif_constants.c  mpif_fortran_booleans.c  mpif_init.c  mpif_mpich.c  mpif_openmpi.c  mpif_sizeof.c  mpif_strings.c
src/OLD/: mpif_mpich.c
test/: CMakeLists.txt  c2f.c  c2f_subf90.f90  comm_f.f  comm_f08.f90  comm_f90.f90  init_f.f  init_f08.f90  init_f90.f90  inplace_f08.f90  inplace_f90.f90  interlanguage.c  interlanguage_subf90.f90  sendrecv_f08.f90  sendrecv_f90.f90  type_create_struct_c.c  type_create_struct_f08.f90  version_c.c  version_f08.f90
test-consume/: CMakeLists.txt  consume_f08.f90
